Fix codemirror double scrollball problem (Andrew **is** cool)

--- a/dev/_/components/sass/main.scss
+++ b/dev/_/components/sass/main.scss
@@ -41,6 +41,7 @@ body {
   min-height: 400px;
 }
 .CodeMirror-scroll {
+  min-height: 400px;
   overflow-y: hidden;
   overflow-x: auto;
 }
